# dwh-config-local

./: .gitignore  docker-compose.yml  pyproject.toml
.terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
src/: get_quotes.py  upload_quotes.py
tests/: test_get_quotes.py
