[project]
name = "config-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.9.6",
    "dbt-postgres>=1.9.0",
    "duckdb>=1.3.2",
    "loguru>=0.7.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.5",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.3",
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
format = "isort . && black ."
lint = "flake8 ."
test = "pytest"
coverage = "pytest --cov=src --cov-report=html --cov-report=term"

[tool.flake8]
max-line-length = 120
