[project]
name = "config-local"
version = "0.1.0"
description = "Data platform project leveraging Google Cloud Platform (GCP) for data lake and data warehouse implementation. Utilizes BigQuery as the data warehouse and Google Cloud Storage as the data lake, with dbt for data transformation and airflow for orchestration."
requires-python = ">=3.13"
dependencies = [
    "dbt-bigquery>=1.10.0",
    "dbt-core>=1.9.6",
    "duckdb>=1.3.2",
    "google-cloud-bigquery>=3.34.0",
    "google-cloud-storage>=2.19.0",
    "loguru>=0.7.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.5",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "dbt-postgres>=1.9.0",
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.3",
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
format = "isort . && black ."
lint = "flake8 ."
test = "pytest"
coverage = "pytest --cov=src --cov-report=html --cov-report=term"
cov = "coverage report"

[tool.flake8]
max-line-length = 120
